Adds buttons and styles.
Adds a button for open notficaion.

Adds a button for close all notifications.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Push Notifications</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <section class="wrapper" id="open">
+        <div class="text">Click me!</div>
+    </section>
+    <section class="wrapper" id="close">
+        <div class="text">Clear</div>
+    </section>
     <script src="components/push.js/push.min.js"></script>
     <script src="js/main.js"></script>
 </body>
